# cdisc-usdm-utils

./: .gitignore  README.md  TA.csv  __init__.py  define.xml  populate_ta_csv.py  pyproject.toml  requirements.txt
.github/workflows/: smoke.yml
Define/: README.md
Define/examples/Define-XML-2-1-ADaM/: ReadMe.md
Define/examples/Define-XML-2-1-ADaM/adam/: defineV21-ADaM.html  defineV21-ADaM.xml
Define/examples/DefineXML-2-1-SDTM/: ReadMe.md  defineV21-SDTM.html  defineV21-SDTM.xml
Define/schema/cdisc-define-2.1/: define-enumerations.html  define-enumerations.xsd
files/: CDISC_Pilot_Study_USDM_sdw_v4.0.0_amendment.xlsx  Define-XML Terminology.xls  pilot_LLZT_protocol.json  usdm_sdw_v4.0.0_amendment.json
scripts/: smoke_sdtm.sh
spec/: TA_defn.csv  TE_spec.csv  TI_defn.csv  TSPARM_spec.csv  TS_spec.csv  TV_defn.csv
src/cdisc_usdm_utils/: cli.py  validation.py
src/cdisc_usdm_utils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/cdisc_usdm_utils/domains/: ta.py  te.py  ti.py  ts.py  tv.py
