[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdisc-usdm-utils"
version = "0.1.0"
description = "Utilities to generate SDTM outputs, Define-XML, and XPT from USDM"
authors = [{ name = "pendingintent" }]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
]

[project.scripts]
usdm-utils = "cdisc_usdm_utils.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["cdisc_usdm_utils"]
